--- a/index.html
+++ b/index.html
@@ -23,5 +23,9 @@
             <li><input type="text"></li>
         </ul>
     </nav>
+
+    <section class="banner">
+
+    </section>
 </body>
 </html>
