--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,24 +9,26 @@
     <link href="styles/reset.css" rel="stylesheet">
     <link href="styles/main.css" rel="stylesheet">
 </head>
+
 <body>
     <nav>
-        <ul>
-            <a href="#"><li><span id="apple-logo"></span></li></a>
-
-            <a href="#"><li>Store</li></a>
-            <a href="#"><li>Mac</li></a>
-            <a href="#"><li>iPod</li></a>
-            <a href="#"><li>iPhone</li></a>
-            <a href="#"><li>iPad</li></a>
-            <a href="#"><li>iTunes</li></a>
-            <a href="#"><li>Support</li></a>
-            <li><input type="text"></li>
-        </ul>
+        <a href="#"><span id="apple-logo"></span></a>
+        <a href="#">Store</a>
+        <a href="#">Mac</a>
+        <a href="#">iPod</a>
+        <a href="#">iPhone</a>
+        <a href="#">iPad</a>
+        <a href="#">iTunes</a>
+        <a href="#">Support</a>
+        <form>
+            <input type='search'>
+            <i class="fas fa-search"></i>
+        </form>
     </nav>
 
     <section class="banner">
 
     </section>
 </body>
+
 </html>
