--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <a href="#">iTunes</a>
         <a href="#">Support</a>
         <form>
-            <input type='search'>
-            <i class="fas fa-search"></i>
+            <input type="search">
+            <span class="fa-search"></span>
         </form>
     </nav>
 
