--- a/index.html
+++ b/index.html
@@ -26,9 +26,41 @@
         </form>
     </nav>
 
-    <section class="banner">
+    <header>
+        <a href="https://web.archive.org/web/20140301004610/http://www.apple.com/your-verse/">
+            <h1><img class="small"
+                    src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/your_verse_title_small_2x.png"
+                    width="980" height="104" alt="What will your verse be?"></h1>
+            <h2>
+                <a href="/web/20140301004610/http://www.apple.com/your-verse/">
+                    <img class="small"
+                        src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/your_verse_subhead_small_2x.png"
+                        width="980" height="82"
+                        alt="Everyone has something to share. See how people are using iPad in their unique ways to add to the world’s story.">
+                </a>
+            </h2>
+        </a>
+        <h3>
+            <img class="medium"
+                src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/cta_your_verse_27pt_2x.png"
+                width="980" height="32" style="object-fit: cover; object-position: 100% 0%;">
+        </h3>
+        <div class="promos">
+            <img src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/promo_iphone5s_2x.jpg"
+                width="364" height="200" alt="iPhone 5s. Forward thinking.">
+            <img src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/promo_iphone5c_2x.jpg"
+                width="364" height="200" alt="iPhone 5c. For the colorful.">
+            <img src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/promo_30_years_2x.jpg"
+                width="364" height="200" alt="Happy Birthday, Mac. Explore 30 years of innovation on the Mac.">
+            <img src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/promo_supplier_responsibility_2x.jpg"
+                width="364" height="200" alt="Supplier Responsibility The latest results of our worldwide efforts.">
+        </div>
+    </header>
 
-    </section>
+    <footer>
+        <span>Shop the <a href="#">Apple Online Store</a> (1-800-MY-APPLE), visit an Apple Retail Store, or find a reseller. Site Map | Hot News | RSS Feeds | Media Info | Environment | Job Opportunities | Contact Us | Choose your country or region</span>
+        <div>Copyright © 2014 Apple Inc. All rights reserved. <a href="#">Terms of Use</a> | <a href="#">Privacy Policy</a></div>
+    </footer>
 </body>
 
 </html>
